--- a/01HTML/estilo.css
+++ b/01HTML/estilo.css
@@ -39,6 +39,21 @@ body {
 
 
 }
+.name .img{
+    position: absolute;
+    top:27%;
+    right: 5%;
+    width: 180px;
+    height: 180px;
+    border-radius: 100%;
+    transform: skewY(5deg);
+    overflow: hidden;
+
+}
+.name .img img{
+    width:200px ;
+    height:200px;
+}
 
 .info{
     width:90%;
@@ -46,30 +61,46 @@ body {
     background: #FFC554;
     margin: 5% auto;
     padding: 20px;
+    border-radius: 20px;
 }
 
 .info .titulodat{
-    color:#FFF8F0;
+    color:#bc6c25;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: xx-large;
     text-align: center;
     font-weight: bolder;
-    border-bottom: 2px white dashed;
+    border-bottom: 2px #bc6c25 dashed;
 }
 
 .info .titulohab{
-    color: white;
+    color: #bc6c25;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
     font-size: large;
+    display: inline;
+    margin-right: 20px;
 
 }
 
 .info .tituloexp{
-    color: white;
+    color: #392F5A;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bolder;
+    font-weight: normal;
     font-size: large;
+    display: inline;
 
 }
 
+.info span{
+    display: inline-block;
+    width: auto;
+    height: auto;
+    padding-left:1% ;
+    padding-right: 1%;
+    background: #7f5539;
+    color: white ;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: large;
+    border-radius: 8px;
+}
