--- a/02Formulario/css/stilo.css
+++ b/02Formulario/css/stilo.css
@@ -8,6 +8,35 @@ body{
     background-image: url('fondo.jpg');
 }
 
+
+
+.menu{
+    list-style: none;
+    padding: 0;
+    background: #092327;
+    width: 90%;
+    max-width: 1000px;
+    margin:auto;
+
+}
+
+.menu li a{
+    text-decoration: none;
+    color: white;
+    padding: 20px;
+    display: block;
+
+}
+
+.menu li a:hover{
+    background: #ef8354;
+}
+
+.menu li{
+    display: inline-block;
+    text-align: center;
+}
+
 .titulo{
     text-align: center;
     font-family: 'Roboto';
