--- a/02Formulario/css/contraseña.css
+++ b/02Formulario/css/contraseña.css
@@ -35,6 +35,14 @@ body{
     text-align: center;
 }
 
+img{
+
+    width: 50px;
+    height: 50px;
+    float: center;
+
+}
+
 .titulo{
     text-align: center;
     font-family: 'Roboto';
@@ -85,52 +93,17 @@ body{
      
 }
 
+
 .register a:hover{
-    color: black;
+    color: white;
     text-decoration: underline;
      
 }
 
-.buttons{
-    margin-top: 35px;
-    height: 60px;
-    text-align: center;
-    
+img{
+
+    width: 50px;
+    height: 50px;
+    float: center;
 
 }
-
-.buttons img{
-    float: left;
-    width: 29px;
-    height: 29px;
-}
-
-.buttons button{
-    border-radius:20px;
-    width: 130px;
-    height: 35px;
-    
-    
-}
-
-.buttons p{
-    margin-top: -4px;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.btn{
-    
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: #1f53c5;
-    border: none;
-    padding: 12px;
-    color: white;
-    margin: 16px 0;
-    font-size: 16px;
-    border-radius: 12px;
-    
-}  
