--- a/02Formulario/css/estiloIS.css
+++ b/02Formulario/css/estiloIS.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 body{
     background-image: url('fondo.jpg');
 }
@@ -17,6 +18,7 @@ body{
     margin:auto;
 
 }
+
 
 .menu li a{
     text-decoration: none;
@@ -85,52 +87,17 @@ body{
      
 }
 
+
 .register a:hover{
-    color: black;
+    color: white;
     text-decoration: underline;
      
 }
 
-.buttons{
-    margin-top: 35px;
-    height: 60px;
-    text-align: center;
-    
+img{
+
+    width: 50px;
+    height: 50px;
+    float: center;
 
 }
-
-.buttons img{
-    float: left;
-    width: 29px;
-    height: 29px;
-}
-
-.buttons button{
-    border-radius:20px;
-    width: 130px;
-    height: 35px;
-    
-    
-}
-
-.buttons p{
-    margin-top: -4px;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.btn{
-    
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: #1f53c5;
-    border: none;
-    padding: 12px;
-    color: white;
-    margin: 16px 0;
-    font-size: 16px;
-    border-radius: 12px;
-    
-}  
