--- a/02Formulario/css/stilo.css
+++ b/02Formulario/css/stilo.css
@@ -87,19 +87,24 @@ body{
      
 }
 
+
 .register a:hover{
     color: white;
     text-decoration: underline;
      
 }
 
-.register .botons{
+.btn{
+    
     width: 100%;
+    height: 40px;
+    border-radius: 40px;
     background: #1f53c5;
     border: none;
     padding: 12px;
     color: white;
     margin: 16px 0;
     font-size: 16px;
-
-}
+    border-radius: 12px;
+    
+}  
