--- a/03Registro/css/estilo.css
+++ b/03Registro/css/estilo.css
@@ -1,109 +1,129 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
-    background-image: url(R\ \(4\).jpg );
-    font-family:'Poppins', sans-serif;
-}
-
-
-.menu{
-    list-style: none;
-    padding: 0;
-    background: #092327;
-    width: 90%;
-    max-width: 1000px;
-    margin:auto;
-
-}
-
-.menu li a{
-    text-decoration: none;
-    color: white;
-    padding: 20px;
-    display: block;
-
-}
-
-.menu li a:hover{
-    background: #ef8354;
-}
-
-.menu li{
-    display: inline-block;
-    text-align: center;
+   
+    margin:0;
+    background-image: url(./R\ \(4\).jpg);
+    font-family:sans-serif ;
+    
 }
 
 .container{
-    width: 300px;
-    margin: 20vh auto 0 auto;
-    padding: 20px;
-    background-color: whitesmoke;
-    border-radius: 4px;
-    font-size: 12px;
-
+   /* border: 3px solid red;*/
+    max-width: 90%;
+    margin: auto;
+    margin-top:20px;
+   
 }
 
-.container h1{
-    color: #0f2027;
+
+[type="checkbox"] {
+    display: none;
+}
+
+[type="checkbox"]:checked + label::before{
+    background: black;
+    transition: 1s;
+    transform: rotate(180deg);
+}
+
+[type="checkbox"]:checked + label{
+    color: black;
+}
+
+.condiciones{
+    margin-left: 15px;
+    position: relative;
+    color:black;
+    font-size: 13px;
+}
+
+.condiciones label::before{
+    content: "";
+    width: 8px;
+    height: 8px;
+    border: 1px solid black;
+    position: absolute;
+    left:-14px;
+}
+
+.form{
+   /* border: 3px solid green;*/
+   border-top: 2px solid black;
+    max-width: 400px;
+    padding: 30px;
+    margin: auto;
+    margin-top: 10px;
+    background: whitesmoke;
+}
+
+.titulo{
+    font-weight: bold;
+    font-size: 30px;
     text-align: center;
-}
-
-
-.container button{
-
-    padding: 10px;
-    margin-top:  10px;
-    width: 100%;
-    color:white;
-    background-color: rgb(41, 57, 194);
-    border: none;
-    border-radius: 4px;
+    margin:0;
+    margin-bottom: 20px;
+    letter-spacing: 3px;
 
 }
 
 .form-input{
+    
+    margin-bottom: 30px ;
+}
 
-    display: flex;
-    flex-direction: column;
+.form-input label{
+    display: block;
+    margin: 10px;
+    font-size: 15px;
+    color: gray
+
 }
 
 .form-input input{
-
-    border: 2px solid #f0f0f0;
-    border-radius: 4px;
-    display: block;
-    font-size: 12px;
-    padding:10px;
-    width: 90%;
-}
-
-.form-input input:focus{
-    outline:0;
-}
-
-.form-input.success input{
-    border-color: #09c372;
-}
-
-.form-input.error input{
-    border-color: #ff3860;
-}
-
-.form-input .error{
-    color:#ff3860;
-    font-size: 3px;
-    height: 13px;
-}
-.boton{
-
-     
     width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: #1f53c5;
     border: none;
-    padding: 12px;
-    color: white;
-    margin: 16px 0;
-    font-size: 16px;
-    border-radius: 12px;
+    background: none;
+    outline: none;
+    border-bottom: 1px solid black;
+}
 
+.form-input input:focus + label {
+    font-weight: bold;
+    color: black;
+}
+
+.button input{
+    background: #1f53c5;
+    color: white;
+    padding: 10px 50px;
+    font-size: 25px;
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    border-radius: 15px;
+    border: none;
+}
+
+
+.button input:hover{
+    transition: 0.5s;
+    background: gray;
+
+}
+
+.mensajeError{
+    color:red;
+    margin-top: 0px;
+    font-size: 15px;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.mensajeCorrecto{
+    text-align: center;
+    font-weight: bold;
 }
