--- a/03Registro/css/estilo.css
+++ b/03Registro/css/estilo.css
@@ -10,6 +10,32 @@ body{
     
 }
 
+.menu{
+    list-style: none;
+    padding: 0;
+    background: #092327;
+    width: 90%;
+    max-width: 1000px;
+    margin:auto;
+
+}
+
+.menu li a{
+    text-decoration: none;
+    color: white;
+    padding: 20px;
+    display: block;
+
+}
+
+.menu li a:hover{
+    background: #ef8354;
+}
+
+.menu li{
+    display: inline-block;
+    text-align: center;
+}
 .container{
    /* border: 3px solid red;*/
     max-width: 90%;
