--- a/03Registro/css/estilo.css
+++ b/03Registro/css/estilo.css
@@ -1,15 +1,14 @@
-*{
+* {
     box-sizing: border-box;
-}
-
-body{
-   
-    margin:0;
+  }
+  
+  body {
+    margin: 0;
     background-image: url(./R\ \(4\).jpg);
-    font-family:sans-serif ;
-    
-}
+    font-family: sans-serif;
+  }
 
+  
 .menu{
     list-style: none;
     padding: 0;
@@ -36,120 +35,130 @@ body{
     display: inline-block;
     text-align: center;
 }
-.container{
-   /* border: 3px solid red;*/
+
+  
+  .container {
+    /* border: 3px solid red; */
     max-width: 90%;
     margin: auto;
-    margin-top:20px;
-   
-}
-
-
-[type="checkbox"] {
+    margin-top: 20px;
+  }
+  
+  :root {
+    --cfondo: rgb(207, 211, 212);
+    --cfondoForm1: rgba(1, 80, 88, 0.39);
+    --cfondoForm2: rgb(129, 193, 202);
+    --cnegro: black;
+    --ctexto: rgb(14, 81, 88);
+    --ctextoDark: rgb(1, 35, 39);
+    --cblanco: white;
+    --error: rgb(184, 31, 31);
+  }
+  
+  [type="checkbox"] {
     display: none;
-}
-
-[type="checkbox"]:checked + label::before{
-    background: black;
-    transition: 1s;
+  }
+  
+  [type="checkbox"]:checked + label::before {
+    background: var(--cnegro);
+    transition: 0.5s;
     transform: rotate(180deg);
-}
-
-[type="checkbox"]:checked + label{
-    color: black;
-}
-
-.condiciones{
-    margin-left: 15px;
-    position: relative;
-    color:black;
-    font-size: 13px;
-}
-
-.condiciones label::before{
-    content: "";
-    width: 8px;
-    height: 8px;
-    border: 1px solid black;
-    position: absolute;
-    left:-14px;
-}
-
-.form{
-   /* border: 3px solid green;*/
-   border-top: 2px solid black;
+  }
+  
+  [type="checkbox"]:checked + label {
+    color: var(--cnegro);
+  }
+  
+  /* ---- FORMULARIO ---- */
+  
+  .form {
+    /* border: 3px solid green; */
+    border-top: 2px solid var(--cnegro);
     max-width: 400px;
-    padding: 30px;
+    padding: 30px 50px;
     margin: auto;
     margin-top: 10px;
-    background: whitesmoke;
-}
-
-.titulo{
+    background: linear-gradient(
+      0deg,
+      var(--cfondoForm1) 0%,
+      var(--cfondoForm2) 50%
+    );
+  }
+  
+  .form-titulo {
     font-weight: bold;
     font-size: 30px;
     text-align: center;
-    margin:0;
+    margin: 0;
     margin-bottom: 20px;
     letter-spacing: 3px;
-
-}
-
-.form-input{
-    
-    margin-bottom: 30px ;
-}
-
-.form-input label{
+  }
+  
+  .form-input {
+    margin-bottom: 30px;
+  }
+  
+  .form-input label {
     display: block;
-    margin: 10px;
+    margin-top: 10px;
     font-size: 15px;
-    color: gray
-
-}
-
-.form-input input{
+    color: var(--ctexto);
+  }
+  
+  .form-input input {
     width: 100%;
     border: none;
-    background: none;
     outline: none;
-    border-bottom: 1px solid black;
-}
-
-.form-input input:focus + label {
+    background: none;
+    border-bottom: 1px solid var(--ctexto);
+  }
+  
+  .form-input input:focus + label {
     font-weight: bold;
-    color: black;
-}
-
-.button input{
-    background: #1f53c5;
-    color: white;
+    color: var(--cnegro);
+  }
+  
+  .form-termsAndConditions {
+    margin-left: 15px;
+    position: relative;
+    color: var(--ctexto);
+    font-size: 13px;
+  }
+  
+  .form-termsAndConditions label::before {
+    content: "";
+    width: 8px;
+    height: 8px;
+    border: 1px solid var(--cnegro);
+    position: absolute;
+    left: -14px;
+  }
+  
+  .form-boton input {
+    background: var(--cnegro);
+    color: var(--cblanco);
     padding: 10px 50px;
     font-size: 25px;
     display: block;
     margin: auto;
-    margin-top: 20px;
-    border-radius: 15px;
+    margin-top: 40px;
     border: none;
-}
-
-
-.button input:hover{
+  }
+  
+  .form-boton input:hover {
+    background: var(--ctextoDark);
     transition: 0.5s;
-    background: gray;
-
-}
-
-.mensajeError{
-    color:red;
+  }
+  
+  .mensajeError {
+    color: var(--error);
     margin-top: 0px;
-    font-size: 15px;
     font-size: 12px;
     font-weight: bold;
     letter-spacing: 1px;
-}
-
-.mensajeCorrecto{
+  }
+  
+  .mensajeCorrecto {
     text-align: center;
     font-weight: bold;
-}
+  }
