--- a/Examen/css/estilo.css
+++ b/Examen/css/estilo.css
@@ -1,12 +1,30 @@
 *{
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family:'Poppins', sans-serif;
 }
 
 body {
     margin: 0;
     font-family: sans-serif;
-	background-color: #AB3428;
+    background-image: linear-gradient(135deg, 
+    #00b7d4, #505488, #2f3f80, #161569,
+    #5a4894, #a950a1, #ff7cae);
+    background-size: 500% ;
+    animation: fanimado 10s infinite;
     
+  }
+
+  @keyframes fanimado{
+    0%{
+        background-position: 0% 50%;
+    }
+    50%{
+      background-position: 100% 50%;
+    }
+    100%{
+      background-position: 0% 50%;
+    }
   }
 
    
@@ -39,13 +57,23 @@ body {
 
   :root {
     --cfondo: rgb(207, 211, 212);
-    --cfondoForm1: rgba(1, 80, 88, 0.39);
-    --cfondoForm2: rgb(129, 193, 202);
+    --cfondoForm1: #5a4894;
+    --cfondoForm2: #a950a1;
     --cnegro: black;
     --ctexto: rgb(14, 81, 88);
-    --ctextoDark: rgb(1, 35, 39);
+    --ctextoDark: #ff7cae;
     --cblanco: white;
     --error: rgb(184, 31, 31);
+  }
+
+  .titi{
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 20px;
+    letter-spacing: 3px;
+    color:white;
   }
 
   .titulo{
@@ -59,7 +87,6 @@ body {
   }
 
   .tablacontainer{
-    /* border: 3px solid green; */
     border-top: 2px solid var(--cnegro);
     max-width: 400px;
     padding: 30px 50px;
@@ -74,20 +101,30 @@ body {
   }
 
 .tablaamortizacion{
-
 	text-align: left;
 	border-collapse: collapse;
 	width: 100%;
+  color: #ffff;
+  font-size: 14px;
+  table-layout: fixed;
+  border-collapse: collapse;
+
 }
 
-.tablaamortizacion th, td{
-	padding: 20px;
+.tablaamortizacion th{
+	padding: 20px 15px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
+
+.tablaamortizacion td{
+	padding: 15px;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+}
+
 
 .tablaamortizacion thead{
-	background-color: #246355;
-	border-bottom: solid 5px;
-	color: white;
+	background: rgba(243, 140, 210,0.4);
 }
 
 .tablaamortizacion tr:nth-child(even){
@@ -95,7 +132,7 @@ body {
 }
 
 .tablaamortizacion  tr:hover{
-	background-color: #369681;
+	background: rgba(243, 103, 199, 0.4);
 }
 
 .form-boton input {
